--- a/404.html
+++ b/404.html
@@ -26,15 +26,15 @@ License URL: http://creativecommons.org/licenses/by/3.0/
             <div class="wrapper">
                 <div class="main-cover w3">
                     <h1>
-                        <a href="index.html" class="logo">Wed Error Page</a>
+                        <a href="index.html" class="logo">Page Not Found</a>
                     </h1>
                     <h4 class="cover-para w3ls">4<span class="fa fa-heart-o" aria-hidden="true"></span>4</h4>
-                    <p class="form-text">Sorry, we're offline right now to make our site even better.
-                        Please, come back later and check what we've been up to.</p>
+                    <p class="form-text">Sorry, the page you requested can not be found.
+                        Please, try another one or contact us.</p>
                     <a href="index.html" class="back-button">Back to Home</a>
                 </div>
                 <div class="copyright text-center">
-                    <p>© 2019 Wed Error Page . All rights reserved | Design by <a href="http://w3layouts.com/"
+                    <p>© 2019 Web Error Page . All rights reserved | Design by <a href="http://w3layouts.com/"
                             target="_blank">W3Layouts</a></p>
                 </div>
             </div>
