--- a/index.html
+++ b/index.html
@@ -1,1 +1,24 @@
-Hello World
+<!DOCTYPE html>
+<html lang="zxx">
+
+<head>
+    <title>Atex Home Page</title>
+    <!-- Meta tag Keywords -->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="UTF-8" />
+    <link rel="stylesheet" href="css/style.css" type="text/css" media="all" /><!-- Style-CSS -->
+    <link href="css/font-awesome.css" rel="stylesheet"><!-- font-awesome-icons -->
+</head>
+
+<body>
+    <section class="error-page">
+        <div class="covers-main w3layouts">
+            <div class="wrapper">
+                <div class="main-cover w3">
+                </div>
+            </div>
+        </div>
+    </section>
+</body>
+
+</html>
