--- a/404.html
+++ b/404.html
@@ -35,7 +35,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                 </div>
                 <div class="copyright text-center">
                     <p>© 2019 Web Error Page . All rights reserved | Design by <a href="http://w3layouts.com/"
-                            target="_blank">W3Layouts</a></p>
+                            target="_blank">Atex</a></p>
                 </div>
             </div>
         </div>
