--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
     </script>
     
     <script async src=//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js></script>
-    <script type=text/javascript src=/static/js/manifest.7a421f3f459a2102cc78.js></script>
-    <script type=text/javascript src=/static/js/vendor.1e4877a82fa06b470b44.js></script>
-    <script type=text/javascript src=/static/js/app.fc261c6949ccc7be570d.js></script>
+    <script type=text/javascript src=https://findtheinvisiblecow.com/static/js/manifest.7a421f3f459a2102cc78.js></script>
+    <script type=text/javascript src=https://findtheinvisiblecow.com/static/js/vendor.1e4877a82fa06b470b44.js></script>
+    <script type=text/javascript src=https://findtheinvisiblecow.com/static/js/app.fc261c6949ccc7be570d.js></script>
 
     <section class="error-page">
         <div class="covers-main w3layouts">
