--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="css/style.css" type="text/css" media="all" /><!-- Style-CSS -->
     <link href="css/font-awesome.css" rel="stylesheet"><!-- font-awesome-icons -->
+    <link href="https://fonts.googleapis.com/css?family=Roboto:100,400,700" rel=stylesheet type=text/css>
+    <link href=https://findtheinvisiblecow.com/static/static/css/app.dec7a28ea6193a83f2f33a2b9f30b38a.css rel=stylesheet>
 </head>
 
 <body>
