--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="css/style.css" type="text/css" media="all" /><!-- Style-CSS -->
     <link href="css/font-awesome.css" rel="stylesheet"><!-- font-awesome-icons -->
-    <link href="https://fonts.googleapis.com/css?family=Roboto:100,400,700" rel=stylesheet type=text/css>
-    <link href=https://findtheinvisiblecow.com/static/static/css/app.dec7a28ea6193a83f2f33a2b9f30b38a.css rel=stylesheet>
+
+<meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1,maximum-scale=1"><meta name=description content="Because it ain't gonna find itself."><link href="https://fonts.googleapis.com/css?family=Roboto:100,400,700" rel=stylesheet type=text/css><link rel=icon type=image/png href=/static/favicon.png><meta property=og:title content="Find the Invisible Cow"><meta property=og:url content=http://findtheinvisiblecow.com><meta property=og:image content=http://findtheinvisiblecow.com/static/og-image.png><meta property=og:description content="Because it ain't gonna find itself."><meta name=twitter:card content=summary_large_image><meta name=twitter:creator content=@scriptist><meta name=twitter:title content="Find the Invisible Cow"><meta name=twitter:description content="Because it ain't gonna find itself."><meta name=twitter:image content=http://findtheinvisiblecow.com/static/og-image.png><link href=/static/css/app.dec7a28ea6193a83f2f33a2b9f30b38a.css rel=stylesheet><script type="text/javascript" src="https://gc.kis.v2.scr.kaspersky-labs.com/FD126C42-EBFA-4E12-B309-BB3FDD723AC1/main.js?attr=Gy2leuiu5C6wgwkhthBmdJxJZsn57nuZl0lmYMJ4T6UVXjR_ZOOUCw1-QoqfnSpBGahkGEo8EM_Tv26nKPfsow" charset="UTF-8"></script><link rel="stylesheet" crossorigin="anonymous" href="https://gc.kis.v2.scr.kaspersky-labs.com/E3E8934C-235A-4B0E-825A-35A08381A191/abn/main.css?attr=aHR0cHM6Ly9maW5kdGhlaW52aXNpYmxlY293LmNvbS8"/>
+
 </head>
 
 <body>
